Calc.output
Grammar

    0 $accept: Program $end

    1 Program: Program Calculadora
    2        | Calculadora

    3 $@1: %empty

    4 Calculadora: TKN_ID $@1 TKN_ASIGN Expresion TKN_PTOCOMA

    5 Expresion: TKN_NUM
    6          | Expresion TKN_MAS Expresion
    7          | Expresion TKN_MENOS Expresion
    8          | Expresion TKN_MULT Expresion
    9          | Expresion TKN_DIV Expresion
   10          | TKN_PAA Expresion TKN_PAC
   11          | TKN_SEN TKN_PAA Expresion TKN_PAC
   12          | TKN_COS TKN_PAA Expresion TKN_PAC
   13          | TKN_TAN TKN_PAA Expresion TKN_PAC
   14          | Expresion TKN_POW Expresion
   15          | TKN_SQRT TKN_PAA Expresion TKN_PAC
   16          | TKN_LN TKN_PAA Expresion TKN_PAC
   17          | TKN_UNOSOBREX TKN_PAA Expresion TKN_PAC


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TKN_NUM <real> (258) 5
    TKN_ASIGN (259) 4
    TKN_PTOCOMA (260) 4
    TKN_ID <real> (261) 4
    TKN_MULT (262) 8
    TKN_DIV (263) 9
    TKN_MAS (264) 6
    TKN_MENOS (265) 7
    TKN_PAA (266) 10 11 12 13 15 16 17
    TKN_PAC (267) 10 11 12 13 15 16 17
    TKN_SEN (268) 11
    TKN_COS (269) 12
    TKN_TAN (270) 13
    TKN_POW (271) 14
    TKN_SQRT (272) 15
    TKN_LN (273) 16
    TKN_UNOSOBREX (274) 17


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    Program (21)
        on left: 1 2
        on right: 0 1
    Calculadora (22)
        on left: 4
        on right: 1 2
    $@1 (23)
        on left: 3
        on right: 4
    Expresion <real> (24)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 4 6 7 8 9 10 11 12 13 14 15 16 17


State 0

    0 $accept: . Program $end

    TKN_ID  shift, and go to state 1

    Program      go to state 2
    Calculadora  go to state 3


State 1

    4 Calculadora: TKN_ID . $@1 TKN_ASIGN Expresion TKN_PTOCOMA

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    0 $accept: Program . $end
    1 Program: Program . Calculadora

    $end    shift, and go to state 5
    TKN_ID  shift, and go to state 1

    Calculadora  go to state 6


State 3

    2 Program: Calculadora .

    $default  reduce using rule 2 (Program)


State 4

    4 Calculadora: TKN_ID $@1 . TKN_ASIGN Expresion TKN_PTOCOMA

    TKN_ASIGN  shift, and go to state 7


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Program Calculadora .

    $default  reduce using rule 1 (Program)


State 7

    4 Calculadora: TKN_ID $@1 TKN_ASIGN . Expresion TKN_PTOCOMA

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 16


State 8

    5 Expresion: TKN_NUM .

    $default  reduce using rule 5 (Expresion)


State 9

   10 Expresion: TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 17


State 10

   11 Expresion: TKN_SEN . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 18


State 11

   12 Expresion: TKN_COS . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 19


State 12

   13 Expresion: TKN_TAN . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 20


State 13

   15 Expresion: TKN_SQRT . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 21


State 14

   16 Expresion: TKN_LN . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 22


State 15

   17 Expresion: TKN_UNOSOBREX . TKN_PAA Expresion TKN_PAC

    TKN_PAA  shift, and go to state 23


State 16

    4 Calculadora: TKN_ID $@1 TKN_ASIGN Expresion . TKN_PTOCOMA
    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion

    TKN_PTOCOMA  shift, and go to state 24
    TKN_MULT     shift, and go to state 25
    TKN_DIV      shift, and go to state 26
    TKN_MAS      shift, and go to state 27
    TKN_MENOS    shift, and go to state 28
    TKN_POW      shift, and go to state 29


State 17

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   10          | TKN_PAA Expresion . TKN_PAC
   14          | Expresion . TKN_POW Expresion

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 30
    TKN_POW    shift, and go to state 29


State 18

   11 Expresion: TKN_SEN TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 31


State 19

   12 Expresion: TKN_COS TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 32


State 20

   13 Expresion: TKN_TAN TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 33


State 21

   15 Expresion: TKN_SQRT TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 34


State 22

   16 Expresion: TKN_LN TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 35


State 23

   17 Expresion: TKN_UNOSOBREX TKN_PAA . Expresion TKN_PAC

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 36


State 24

    4 Calculadora: TKN_ID $@1 TKN_ASIGN Expresion TKN_PTOCOMA .

    $default  reduce using rule 4 (Calculadora)


State 25

    8 Expresion: Expresion TKN_MULT . Expresion

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 37


State 26

    9 Expresion: Expresion TKN_DIV . Expresion

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 38


State 27

    6 Expresion: Expresion TKN_MAS . Expresion

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 39


State 28

    7 Expresion: Expresion TKN_MENOS . Expresion

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 40


State 29

   14 Expresion: Expresion TKN_POW . Expresion

    TKN_NUM        shift, and go to state 8
    TKN_PAA        shift, and go to state 9
    TKN_SEN        shift, and go to state 10
    TKN_COS        shift, and go to state 11
    TKN_TAN        shift, and go to state 12
    TKN_SQRT       shift, and go to state 13
    TKN_LN         shift, and go to state 14
    TKN_UNOSOBREX  shift, and go to state 15

    Expresion  go to state 41


State 30

   10 Expresion: TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 10 (Expresion)


State 31

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   11          | TKN_SEN TKN_PAA Expresion . TKN_PAC
   14          | Expresion . TKN_POW Expresion

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 42
    TKN_POW    shift, and go to state 29


State 32

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   12          | TKN_COS TKN_PAA Expresion . TKN_PAC
   14          | Expresion . TKN_POW Expresion

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 43
    TKN_POW    shift, and go to state 29


State 33

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   13          | TKN_TAN TKN_PAA Expresion . TKN_PAC
   14          | Expresion . TKN_POW Expresion

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 44
    TKN_POW    shift, and go to state 29


State 34

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion
   15          | TKN_SQRT TKN_PAA Expresion . TKN_PAC

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 45
    TKN_POW    shift, and go to state 29


State 35

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion
   16          | TKN_LN TKN_PAA Expresion . TKN_PAC

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 46
    TKN_POW    shift, and go to state 29


State 36

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion
   17          | TKN_UNOSOBREX TKN_PAA Expresion . TKN_PAC

    TKN_MULT   shift, and go to state 25
    TKN_DIV    shift, and go to state 26
    TKN_MAS    shift, and go to state 27
    TKN_MENOS  shift, and go to state 28
    TKN_PAC    shift, and go to state 47
    TKN_POW    shift, and go to state 29


State 37

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    8          | Expresion TKN_MULT Expresion .
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion

    TKN_POW  shift, and go to state 29

    $default  reduce using rule 8 (Expresion)


State 38

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
    9          | Expresion TKN_DIV Expresion .
   14          | Expresion . TKN_POW Expresion

    TKN_POW  shift, and go to state 29

    $default  reduce using rule 9 (Expresion)


State 39

    6 Expresion: Expresion . TKN_MAS Expresion
    6          | Expresion TKN_MAS Expresion .
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion

    TKN_MULT  shift, and go to state 25
    TKN_DIV   shift, and go to state 26
    TKN_POW   shift, and go to state 29

    $default  reduce using rule 6 (Expresion)


State 40

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    7          | Expresion TKN_MENOS Expresion .
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion

    TKN_MULT  shift, and go to state 25
    TKN_DIV   shift, and go to state 26
    TKN_POW   shift, and go to state 29

    $default  reduce using rule 7 (Expresion)


State 41

    6 Expresion: Expresion . TKN_MAS Expresion
    7          | Expresion . TKN_MENOS Expresion
    8          | Expresion . TKN_MULT Expresion
    9          | Expresion . TKN_DIV Expresion
   14          | Expresion . TKN_POW Expresion
   14          | Expresion TKN_POW Expresion .

    $default  reduce using rule 14 (Expresion)


State 42

   11 Expresion: TKN_SEN TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 11 (Expresion)


State 43

   12 Expresion: TKN_COS TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 12 (Expresion)


State 44

   13 Expresion: TKN_TAN TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 13 (Expresion)


State 45

   15 Expresion: TKN_SQRT TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 15 (Expresion)


State 46

   16 Expresion: TKN_LN TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 16 (Expresion)


State 47

   17 Expresion: TKN_UNOSOBREX TKN_PAA Expresion TKN_PAC .

    $default  reduce using rule 17 (Expresion)
